# agentcy-cli

./: CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
brands/_template/: brand.md  design.md
brands/givecare/: design.md
brands/scty/: brand.md  design.md
src/agentcy/: __init__.py  cli.py
src/agentcy/brand/: __init__.py  cli.py  cli_utils.py  loop.py  loop_cli.py
src/agentcy/extract/: extract.mjs  package.json
src/agentcy/forecast/: brief_v1.py  cli.py  cli_display.py  config.py  forecast_v1.py  run_artifacts.py  run_eval.py  smoke_mode.py  visual_snapshots.py
src/agentcy/metrics/: __init__.py  adapter.py  calibration.py  cli.py  synthetic_analysis.py
src/agentcy/persona/: __init__.py  bootstrap.py  cli.py  clients.py  drift.py  eval_cases.py  eval_store.py  learning.py  llm.py  persona.py  utils.py
src/agentcy/protocols/: __init__.py  lineage-rules.md  llm.py  utils.py
src/studio/: CLAUDE.md
src/studio/docs/: _solutions.md  agentcy-loom-breadth-scan-2026-04-12.md  package-cli-alias-readiness-2026-04-12.md  (+2 more)
studio/: .gitignore  README.md
studio/brands/scty/: design.md
studio/runtime/: pnpm-lock.yaml
tests/: test_dispatcher.py  test_package_profiles.py
tests/fixtures/: brief.v1.rich.mirror.json
tests/forecast/: test_cli_artifacts_and_visuals.py  test_file_parser.py  test_llm_client.py  test_report_agent_tool_calls.py  test_report_language.py  test_run_eval_artifacts.py  test_simulation_config_generator.py  test_simulation_runner_cli_mode.py  test_simulation_runner_io.py  test_simulation_runner_state.py  test_simulation_runtime_preflight.py  test_simulation_support.py  test_smoke_mode.py
tests/metrics/: test_cli.py  test_seam.py  test_study.py
tests/persona/: __init__.py  test_eval_workflow.py  test_exporters.py  test_persona.py
tests/protocols/: __init__.py  test_brief_to_forecast_v1.py  test_brief_to_run_result_v1.py  test_canonical_writer_module_references.py  test_forecast_v1_protocol.py  test_performance_v1_protocol.py  test_run_result_to_performance_adapter.py  test_run_result_to_performance_v1.py  test_run_result_to_performance_v1_adapter.py  test_run_result_v1_protocol.py  test_voice_pack_to_brief_v1.py
tools/extract-design/: pnpm-lock.yaml
(+208 files in other folders)
